@@ -7,6 +7,7 @@ Snapshot
 
 	- Handle .thm for all filetypes and not just tiff, gif and png
 		(Michael Legart)
+	- Make GallerySortBy work for directories (Michael Legart)
 
 0.8 Sun Mar  7 11:22:00 CET 2004
 
